--- a/downloads/index.html
+++ b/downloads/index.html
@@ -1,4 +1,11 @@
-index.html
-
-
-https://code.dcoder.tech/files/design/5f38da1bdc55fe0e211affab/indexhtml
+<!doctype html>
+<html>
+ <head></head>
+ <body> 
+  <h1> Hello, Dcoder </h1> 
+  <div>
+    This is a html example from Dcoder, 
+   <br> have fun. :) 
+  </div> 
+ </body>
+</html>
